# back/src/domain/user/user.repository.ts
@@ -5,4 +5,5 @@ export interface UserRepository {
   findByemailAndPassword(User : SingInDTO): Promise<AuthResponseDto | null>;
   registerUser(User : SignUpDTO): Promise<AuthResponseDto>;
   findByEmail(email: string): Promise<AuthResponseDto | null>;
+  findByID(id: number):Promise<AuthResponseDto | null>
 }
